objects/IP_Request__c.object
<CustomObject>
    <fields>
        <fullName>M_ref__c</fullName>
        <label>M-$ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment_Sub_Segment_in_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Segment/Sub-Segment in Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Network Technology</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Compute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max1__c</fullName>
        <description>Max Value Year1 Wafer Starts</description>
        <inlineHelpText>Max Value Year1 Wafer Starts</inlineHelpText>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max2__c</fullName>
        <description>Max Value Year2 Wafer Starts</description>
        <inlineHelpText>Max Value Year2 Wafer Starts</inlineHelpText>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max3__c</fullName>
        <description>Max Value Year3 Wafer Starts</description>
        <inlineHelpText>Max Value Year3 Wafer Starts</inlineHelpText>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meet_Need_by_Dates__c</fullName>
        <label>Meet Need by Dates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Easily</fullName>
                </value>
                <value>
                    <fullName>Challenging</fullName>
                </value>
                <value>
                    <fullName>Not Possible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Memory_Density_Range__c</fullName>
        <label>Memory Density Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Stack__c</fullName>
        <formula>Process_Technology__r.Metal_Stacks_Avaialble__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metal Stack</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min1__c</fullName>
        <description>Min Value Year1 Wafer Starts</description>
        <inlineHelpText>Min Value Year1 Wafer Starts</inlineHelpText>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min2__c</fullName>
        <description>Min Value Year2 Wafer Starts</description>
        <inlineHelpText>Min Value Year2 Wafer Starts</inlineHelpText>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min3__c</fullName>
        <description>Min Value Year3 Wafer Starts</description>
        <inlineHelpText>Min Value Year3 Wafer Starts</inlineHelpText>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVM_Type__c</fullName>
        <label>NVM Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EEPROM</fullName>
                </value>
                <value>
                    <fullName>eFlash</fullName>
                </value>
                <value>
                    <fullName>eFuse</fullName>
                </value>
                <value>
                    <fullName>FRAM</fullName>
                </value>
                <value>
                    <fullName>MRAM</fullName>
                </value>
                <value>
                    <fullName>ROM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nearest_IP_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nearest IP ID</label>
        <referenceTo>Base_IP__c</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_IP_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New IP ID</label>
        <referenceTo>Base_IP__c</referenceTo>
        <relationshipLabel>IP Requests (New IP ID)</relationshipLabel>
        <relationshipName>IP_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What type of New IP Request created?</description>
        <inlineHelpText>What type of New IP Request created?</inlineHelpText>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Checkpoint__c</fullName>
        <label>Next Checkpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_RFQ__c</fullName>
        <label>No of RFQ</label>
        <summaryForeignKey>RFQ_IPR__c.IP_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Production_DK_Need_by__c</fullName>
        <label>Non-Production DK Need by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Standard_PVTs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Non Standard PVT?</description>
        <inlineHelpText>Non Standard PVT?</inlineHelpText>
        <label>Non-Standard PVTs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Cells_In_Library__c</fullName>
        <label>Number Of Cells In Library</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Lanes__c</fullName>
        <label>Number Of Lanes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Tracks__c</fullName>
        <label>Number Of Tracks</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_step_1_Aprrover__c</fullName>
        <formula>(IF(ISBLANK(Approver_1__c),0,1) + IF(ISBLANK(Approver_2__c),0,1) + 
IF(ISBLANK(Approver_3__c),0,1) + IF(ISBLANK(Approver_4__c),0,1) + 
IF(ISBLANK(Approver_5__c),0,1) + IF(ISBLANK(Approver_6__c),0,1) + 
IF(ISBLANK(Approver_7__c),0,1) + IF(ISBLANK(Approver_8__c),0,1) + 
IF(ISBLANK(Approver_9__c),0,1) + IF(ISBLANK(Approver_10__c),0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of step 1 Aprrover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Design_Win__c</fullName>
        <formula>TEXT(Opportunity__r.Design_Win_Review_Status_New__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Design Win</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ITAR_Compliant__c</fullName>
        <label>Opportunity ITAR Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Priority__c</fullName>
        <description>Opportunity Priority</description>
        <inlineHelpText>Opportunity Priority</inlineHelpText>
        <label>Opportunity Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Rating__c</fullName>
        <label>Opportunity Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design Win</fullName>
                </value>
                <value>
                    <fullName>Highly Likely (&gt;75%)</fullName>
                </value>
                <value>
                    <fullName>Medium (25%-75%)</fullName>
                </value>
                <value>
                    <fullName>Low Probability (&lt; 25%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <description>Orientation</description>
        <inlineHelpText>Orientation</inlineHelpText>
        <label>Orientation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IP_RequestsKVYH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Opportunities_List__c</fullName>
        <label>Other Opportunities (List)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Comment__c</fullName>
        <description>Comments of the Requestor</description>
        <inlineHelpText>Overall Comments of the Requestor</inlineHelpText>
        <label>Overall Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PDK_Version__c</fullName>
        <description>PDK Version of the Process Technology</description>
        <inlineHelpText>PDK Version of the Process Technology</inlineHelpText>
        <label>PDK Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDK__c</fullName>
        <label>PDK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PLM_Approve_for_sizing__c</fullName>
        <label>PLM Approve for sizing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <description>Stores Package Information</description>
        <inlineHelpText>Stores Package Information</inlineHelpText>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_IP_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent IP Request</label>
        <referenceTo>IP_Request__c</referenceTo>
        <relationshipLabel>Child IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <description>Performance of IP</description>
        <inlineHelpText>Performance of IP</inlineHelpText>
        <label>Performance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Jitter__c</fullName>
        <label>Period Jitter</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Active__c</fullName>
        <description>Active Power of IP</description>
        <inlineHelpText>Active Power of IP</inlineHelpText>
        <label>Power (Active)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Standby__c</fullName>
        <description>Standby Power</description>
        <inlineHelpText>Standby Power</inlineHelpText>
        <label>Power (Standby)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preliminary_Physical_Views__c</fullName>
        <description>Preliminary Physical View Date</description>
        <inlineHelpText>Preliminary Physical View Date</inlineHelpText>
        <label>Preliminary Physical Views</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Opportunity_Prob__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Opportunity Prob%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Process_Node2__c</fullName>
        <label>Process Node</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10XM</fullName>
                </value>
                <value>
                    <fullName>14LPE</fullName>
                </value>
                <value>
                    <fullName>14LPP</fullName>
                </value>
                <value>
                    <fullName>14LPX</fullName>
                </value>
                <value>
                    <fullName>14XM</fullName>
                </value>
                <value>
                    <fullName>20LPM</fullName>
                </value>
                <value>
                    <fullName>22FDSOI</fullName>
                </value>
                <value>
                    <fullName>28A</fullName>
                </value>
                <value>
                    <fullName>28FDSOI</fullName>
                </value>
                <value>
                    <fullName>28HPM</fullName>
                </value>
                <value>
                    <fullName>28HPP</fullName>
                </value>
                <value>
                    <fullName>28LPH</fullName>
                </value>
                <value>
                    <fullName>28LPH-N</fullName>
                </value>
                <value>
                    <fullName>28LPQ</fullName>
                </value>
                <value>
                    <fullName>28LPS</fullName>
                </value>
                <value>
                    <fullName>28-LP-TI</fullName>
                </value>
                <value>
                    <fullName>28RMG-IMC</fullName>
                </value>
                <value>
                    <fullName>28SHP</fullName>
                </value>
                <value>
                    <fullName>28SLP</fullName>
                </value>
                <value>
                    <fullName>28SLP_RF</fullName>
                </value>
                <value>
                    <fullName>28SLP-ST</fullName>
                </value>
                <value>
                    <fullName>28U</fullName>
                </value>
                <value>
                    <fullName>32SOI</fullName>
                </value>
                <value>
                    <fullName>40BCDlite</fullName>
                </value>
                <value>
                    <fullName>40G</fullName>
                </value>
                <value>
                    <fullName>40LP</fullName>
                </value>
                <value>
                    <fullName>40LP_RF</fullName>
                </value>
                <value>
                    <fullName>45LP</fullName>
                </value>
                <value>
                    <fullName>45SOI</fullName>
                </value>
                <value>
                    <fullName>55DDL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Node__c</fullName>
        <formula>Process_Technology__r.IP_Geometry_Technology__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Node</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Process Technology object.</description>
        <inlineHelpText>Associated Process Technology</inlineHelpText>
        <label>Process Technology</label>
        <referenceTo>Process_Technology__c</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>COT</fullName>
                </value>
                <value>
                    <fullName>Standard Product</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_DK_Need_by__c</fullName>
        <label>Production DK Need by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Voltage_Vpp__c</fullName>
        <label>Program Voltage Vpp</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programming_Time__c</fullName>
        <label>Programming Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projecedt_Testchip_Date__c</fullName>
        <description>Projeced Test Chip Date</description>
        <inlineHelpText>Projeced Test Chip Date</inlineHelpText>
        <label>Projected Testchip Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Project Name of Device</description>
        <inlineHelpText>Project Name of Device</inlineHelpText>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Start_date__c</fullName>
        <description>Projected Start date</description>
        <inlineHelpText>Projected Start date</inlineHelpText>
        <label>Projected Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Tapeout_Date__c</fullName>
        <description>Projected Production Tapeout</description>
        <inlineHelpText>Projected Production Tapeout</inlineHelpText>
        <label>Projected Tapeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Funding_Source__c</fullName>
        <label>Proposed Funding Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provide_Options__c</fullName>
        <label>Provide Options</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provide_Sizing_T__c</fullName>
        <label>Provide Sizing (T)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quiescent_Current__c</fullName>
        <label>Quiescent Current</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFQ_S_Due_Date__c</fullName>
        <label>RFQ/S Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RFQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ</label>
        <referenceTo>RFQ__c</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTA__c</fullName>
        <label>RTA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTC__c</fullName>
        <label>RTC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTF_1__c</fullName>
        <label>RTF 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTF_2__c</fullName>
        <label>RTF 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTL__c</fullName>
        <label>RTL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTM__c</fullName>
        <label>RTM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTP__c</fullName>
        <label>RTP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Read_Access_Time__c</fullName>
        <label>Read Access Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Bid</fullName>
                </value>
                <value>
                    <fullName>Standard Product</fullName>
                </value>
                <value>
                    <fullName>Strategic IP</fullName>
                </value>
                <value>
                    <fullName>Internal Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redundancy__c</fullName>
        <label>Redundancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Output_Voltage_V__c</fullName>
        <label>Reg Output Voltage(V)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of the Associated Account</description>
        <formula>TEXT( Customer_Account_Name__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region of the Associated Account</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Communication_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejection Communication to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Released_Communication_to_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Released Communication to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Category__c</fullName>
        <label>Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New IP</fullName>
                </value>
                <value>
                    <fullName>Migrate IP from GF Process</fullName>
                </value>
                <value>
                    <fullName>Migrate IP from Non-GF Process</fullName>
                </value>
                <value>
                    <fullName>Additional Metal Stack</fullName>
                </value>
                <value>
                    <fullName>Change in Spec</fullName>
                </value>
                <value>
                    <fullName>Additional PVT</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IP Request</fullName>
                    <default>true</default>
                    <label>IP Request</label>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>Grading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_IP_in_Roadmap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested IP in Roadmap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <description>Email of the Requestor</description>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email of the Requestor</inlineHelpText>
        <label>Requestor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <description>Name of the Requestor</description>
        <formula>$User.FirstName  &amp; &apos; &apos;  &amp;  $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Requestor</inlineHelpText>
        <label>Requestor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <description>Phone of the Requestor</description>
        <formula>$User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Phone of the Requestor</inlineHelpText>
        <label>Requestor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research__c</fullName>
        <label>Research</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_AM__c</fullName>
        <label>Reviewed by AM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_FAE__c</fullName>
        <label>Reviewed by FAE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risks</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roadmap__c</fullName>
        <label>Roadmap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rules_Views_Required__c</fullName>
        <label>Rules Views Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sampling_Rate__c</fullName>
        <label>Sampling Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silicon_Area__c</fullName>
        <description>Silicon Area of the IP</description>
        <inlineHelpText>Silicon Area of the IP</inlineHelpText>
        <label>Silicon Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Silicon_Validation_Need_by__c</fullName>
        <label>Silicon Validation Need by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sized__c</fullName>
        <label>Sized by</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASIC</fullName>
                </value>
                <value>
                    <fullName>E&amp;TS</fullName>
                </value>
                <value>
                    <fullName>PowerPC</fullName>
                </value>
                <value>
                    <fullName>COT</fullName>
                </value>
                <value>
                    <fullName>IP Collaboration</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sizing_Completed__c</fullName>
        <label>Sizing Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sizing_Expiration__c</fullName>
        <label>Sizing Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sizing_Required_By__c</fullName>
        <label>Sizing Required By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_Status_of_investigation__c</fullName>
        <label>Source / Status of  investigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Non_ASIC_rules_required__c</fullName>
        <label>Special Non-ASIC rules required</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specification_and_standards_if_any__c</fullName>
        <description>Specification and standards (if any)</description>
        <inlineHelpText>Specification and standards (if any)</inlineHelpText>
        <label>Specification and standards (if any)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speed_Gbps__c</fullName>
        <label>Speed Gbps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted to GF</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Response Provided</fullName>
                </value>
                <value>
                    <fullName>Customer Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Compliance__c</fullName>
        <label>Standard Compliance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Product_Name__c</fullName>
        <label>Standard Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Product_Revenue__c</fullName>
        <label>Standard Product Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standby_Power_Based_On_X1nand2__c</fullName>
        <label>Standby Power Based On X1 and X2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the New IP Request</description>
        <inlineHelpText>Status of the New IP Request</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted for Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_to_GF__c</fullName>
        <label>Submitted to GF</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tapless_Library__c</fullName>
        <label>Tapless Library</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_MPW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target MPW</label>
        <referenceTo>MPW_Train_Maintenance__c</referenceTo>
        <relationshipLabel>IP Requests</relationshipLabel>
        <relationshipName>IP_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>